--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 server.port=8888
 
 ##数据库url
-spring.datasource.url=jdbc:mysql://192.168.1.1:3306/baolong?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://106.14.125.69:3306/baolong?characterEncoding=utf8&useSSL=false
 ##数据库用户名
 spring.datasource.username=root
 ##数据库密码
-spring.datasource.password=root
+spring.datasource.password=haoxijun123
 ##数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
@@ -16,3 +16,5 @@ logging.level.com.dalaoyang.dao.UserMapper=debug
 mybatis-plus.mapper-locations=classpath*:mapper/*Mapper.xml
 ##mybatis-plus type-aliases 文件地址
 mybatis-plus.type-aliases-package=com.xs.blong.index.entity
+#打印sql
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
