--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 server.port=8888
 
 ##数据库url
-spring.datasource.url=jdbc:mysql://106.14.125.69:3306/baolong?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://xxx.xxx.xxx.xxx:xxx/xxxx?characterEncoding=utf8&useSSL=false
 ##数据库用户名
-spring.datasource.username=root
+spring.datasource.username=xxxx
 ##数据库密码
-spring.datasource.password=haoxijun123
+spring.datasource.password=xxxx
 ##数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
