--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 ##端口号
 server.port=8888
+##SSL https配置
+server.ssl.key-store:classpath:ssl/XXXX.pfx
+server.ssl.key-store-password: XXXX
+server.ssl.key-store-type: PKCS12
 
 ##数据库url
-spring.datasource.url=jdbc:mysql://xxx.xxx.xxx.xxx:xxx/xxxx?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://XXX.XXX.XXXX.XXXX:XXXX/XXXX?characterEncoding=utf8&useSSL=false
 ##数据库用户名
-spring.datasource.username=xxxx
+spring.datasource.username=XXXX
 ##数据库密码
-spring.datasource.password=xxxx
+spring.datasource.password=XXXX
 ##数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
